# agents-platform

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TRANSPARENCY_FAQ.md  azure.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_agent.md
.github/workflows/: ci.yml  deploy.yml
agents/code-reviewer/: pyproject.toml
agents/code-reviewer/src/code_reviewer/: __init__.py  config.py  tools.py
agents/code-reviewer/tests/: __init__.py  test_tools.py
agents/data-analyst/: pyproject.toml
agents/data-analyst/src/data_analyst/: __init__.py  config.py  sample_db.py  tools.py
agents/data-analyst/tests/: __init__.py  test_tools.py
agents/expense-approver/: pyproject.toml
agents/expense-approver/src/expense_approver/: __init__.py  config.py  tools.py
agents/expense-approver/tests/: __init__.py  test_tools.py
agents/helpdesk/: pyproject.toml
agents/helpdesk/knowledge/: email-sync.yaml  mfa-setup.yaml  password-reset.yaml  printer.yaml  slow-computer.yaml  teams.yaml  vpn.yaml  wifi.yaml
agents/helpdesk/src/helpdesk/: __init__.py  config.py  tools.py
agents/helpdesk/tests/: __init__.py  test_tools.py
agents/incident-triage/: pyproject.toml
agents/incident-triage/src/incident_triage/: __init__.py  config.py  models.py  tools.py
agents/incident-triage/tests/: __init__.py  test_tools.py
agents/infra-analyzer/: pyproject.toml
agents/infra-analyzer/src/infra_analyzer/: __init__.py  config.py  models.py  tools.py
agents/infra-analyzer/tests/: test_tools.py
agents/knowledge-agent/: pyproject.toml
agents/knowledge-agent/knowledge/: company-handbook.md  it-policy.md  remote-work-policy.md
agents/knowledge-agent/src/knowledge_agent/: __init__.py  config.py  tools.py
agents/knowledge-agent/tests/: __init__.py  test_tools.py
agents/router/: pyproject.toml
agents/router/src/router/: __init__.py  config.py  main.py
deployment/azurefunctions/: function_app.py  local.settings.json  requirements.txt
docs/: adding-agents.md  architecture.md  concepts.md  cost-optimization.md  deployment.md  evals.md  faq.md  getting-started.md  production.md  troubleshooting.md  tutorial.md
evals/: __init__.py  conftest.py  test_response_quality.py  test_routing.py  test_tool_selection.py
examples/a2a-demo/: README.md  docker-compose.yaml  pyproject.toml
examples/a2a-demo/service_a/: main.py  tools.py
examples/mcp-server/: README.md  main.py
infra/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/: enterprise.tfvars  poc.tfvars
scripts/: preflight.py  setup.sh
tests/: __init__.py  test_config.py  test_factory.py  test_middleware.py  test_registry.py  test_scaffold.py  test_workflow.py
