[project]
name = "code-reviewer-agent"
version = "0.1.0"
description = "Code review agent — analyzes code quality, detects issues, suggests improvements"
requires-python = ">=3.13"
dependencies = ["agent-core"]

[tool.uv.sources]
agent-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
