[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Data analyst agent — queries company data via natural language"
requires-python = ">=3.13"
dependencies = ["agent-core"]

[tool.uv.sources]
agent-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/data_analyst"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
