[project]
name = "infra-analyzer-agent"
version = "0.1.0"
description = "Infrastructure analyzer — scans Terraform configs, detects issues, suggests fixes"
requires-python = ">=3.13"
dependencies = ["agent-core"]

[tool.uv.sources]
agent-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/infra_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
