[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Company knowledge agent — searches internal documentation"
requires-python = ">=3.13"
dependencies = ["agent-core"]

[tool.uv.sources]
agent-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
