[project]
name = "router-agent"
version = "0.1.0"
description = "Routes user questions to the right specialist agent"
requires-python = ">=3.13"
dependencies = ["agent-core"]

[tool.uv.sources]
agent-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/router"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
